fix linking of examples/nist under msvc
The example "nist" couldn't be built under windows10 + msvc2017 + cmake3.10

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -77,6 +77,9 @@ if (GFLAGS)
   target_link_libraries(powell ceres ${GFLAGS_LIBRARIES})
 
   add_executable(nist nist.cc)
+  if(MSVC)
+    set_target_properties(nist PROPERTIES COMPILE_FLAGS "${COMPILE_FLAGS} /bigobj")
+  endif()
   target_link_libraries(nist ceres ${GFLAGS_LIBRARIES})
 
   add_executable(more_garbow_hillstrom more_garbow_hillstrom.cc)
